--- a/r3/src/crud.scss
+++ b/r3/src/crud.scss
@@ -13,6 +13,61 @@ body {
             align-items: center;
             justify-content: flex-start;
         }
+        .nest-content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            li {
+                min-width: 100px;
+                background-color: aliceblue;
+                color: black;
+            }
+        }
+    .buttons {
+        display: flex;
+        align-items: center;
+        justify-content: flex-end;
+    }
+    b {
+        margin-right: 7px;
+    }
+    i {
+        margin-left: 7px;
+    }
+    }
+}
+
+textarea {
+    width: 100%;
+}
+.form-group {
+    width: 100%;
+}
+.list-group-item {
+    .item-front {
+        display: flex;
+        align-items: flex-start;
+        justify-content: space-between;
+        flex-direction: column;
+        gap: 10px;
+        width: 100%;
+        .content {
+            display: flex;
+            align-items: center;
+            justify-content: flex-start;
+        }
+        .nest-content {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            width: 100%;
+            li {
+                min-width: 100px;
+                background-color: aliceblue;
+                color: black;
+            }
+        }
     .buttons {
         display: flex;
         align-items: center;
